# pypet_rebuild

./: .gitignore  DESIGN_NOTES.md  ORIGINAL_EXAMPLES.md  ORIGINAL_FRAMEWORK.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example_01_first_steps.py  example_02_trajectory_access_and_storage.py  example_03_trajectory_merging.py  example_04_multiprocessing.py  example_05_custom_parameter.py  example_06_parameter_presetting.py  example_08_find_idx.py  example_09_large_results.py  example_10_get_items_from_all_runs.py  example_12_sharing_data_between_processes.py  example_13_post_processing.py  sir_sweep.ipynb  sir_sweep.py
examples/output/: sir_sweep.h5
pypet_rebuild/: __init__.py  constants.py  environment.py  exceptions.py  exploration.py  logging_utils.py  merge.py  parameters.py  storage.py  trajectory.py  utils.py
tests/: test_environment_processes.py  test_example_05_lorenz.py  test_example_06_presetting.py  test_example_12_shared.py  test_example_13_post_processing.py  test_exploration_basic.py  test_merge.py  test_resume.py  test_run_grouping_and_parallel.py  test_run_utils.py  test_storage_dynamic_loading.py  test_storage_hdf5_basic.py  test_storage_hdf5_numpy.py  test_storage_hdf5_pandas.py  test_storage_partial.py  test_storage_runs_metadata.py  test_trajectory_basic.py  test_utils_inspect_h5.py
