[project]
name = "pypet-rebuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "tables>=3.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
