[project]
name = "pypet-rebuild"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.15.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "tables>=3.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = false
